<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.lbovolini.crowd</groupId>
    <artifactId>crowd</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jacoco.reportPath>${project.basedir}/../target/jacoco.exec</jacoco.reportPath>
    </properties>

    <modules>
        <module>com.github.lbovolini.crowd.benchmark</module>
        <module>com.github.lbovolini.crowd.classloader</module>
        <module>com.github.lbovolini.crowd.core</module>
        <module>com.github.lbovolini.crowd.discovery</module>
        <module>com.github.lbovolini.crowd.client</module>
        <module>com.github.lbovolini.crowd.server</module>
        <module>com.github.lbovolini.crowd.doc</module>
    </modules>

    <build>

        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <source>11</source>
                        <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>
                            @{argLine}
                            --add-opens
                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.connection=ALL-UNNAMED\
                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.buffer=ALL-UNNAMED\
                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.message=ALL-UNNAMED\
                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.message.messages=ALL-UNNAMED\
                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.node=ALL-UNNAMED\
                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.object=ALL-UNNAMED\
                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.request=ALL-UNNAMED\
                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.util=ALL-UNNAMED\
                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.worker=ALL-UNNAMED\
                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.connection=ALL-UNNAMED\
                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.message=ALL-UNNAMED\
                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.monitor=ALL-UNNAMED\
                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.request=ALL-UNNAMED\
                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.service=ALL-UNNAMED\
                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.util=ALL-UNNAMED\
                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.worker=ALL-UNNAMED
                        </argLine>
                        <systemPropertyVariables>
                            <jacoco-agent.destfile>**/jacoco.exec</jacoco-agent.destfile>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.eluder.coveralls</groupId>
                    <artifactId>coveralls-maven-plugin</artifactId>
                    <version>4.3.0</version>
                    <configuration>
                        <repoToken>${COVERALLS_TOKEN}</repoToken>
                        <jacocoReports>${project.basedir}/com.github.lbovolini.crowd.doc/target/site/jacoco-aggregate/jacoco.xml</jacocoReports>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>javax.xml.bind</groupId>
                            <artifactId>jaxb-api</artifactId>
                            <version>2.3.1</version>
                        </dependency>
                    </dependencies>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <dependencies>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.6.28</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>3.6.28</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

</project>
